--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -6,13 +6,21 @@ project(${PROJECT})
 #
 # protobuf
 #
-find_package(Protobuf)
+find_package(Protobuf REQUIRED)
 include_directories(${PROTOBUF_INCLUDE_DIRS})
 protobuf_generate_cpp(PROTO_SRCS PROTO_HDRS wire.proto)
 
-#find_package(ZeroMQ)
+#
+# ZeroMQ
+#
+
+
 #find_package(Boost)
 
 
-add_executable(${PROJECT} main.cpp ${PROTO_SRCS})
-target_link_libraries( ${PROJECT} ${PROTOBUF_LIBRARIES} )
+add_executable(	${PROJECT} 
+				main.cpp 
+				wire.proto ${PROTO_SRCS} ${PROTO_HDRS})
+
+target_link_libraries(	${PROJECT} 
+						${PROTOBUF_LIBRARIES} )
