--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -13,22 +13,21 @@ find_package(Protobuf REQUIRED)
 include_directories(${PROTOBUF_INCLUDE_DIRS})
 protobuf_generate_cpp(PROTO_SRCS PROTO_HDRS wire.proto)
 
-#	ZeroMQ
-#
-
 #	Boost
 #
 SET(Boost_USE_STATIC_LIBS ON)
-find_package( Boost COMPONENTS log program_options REQUIRED)
+find_package( Boost COMPONENTS log program_options system date_time thread regex chrono REQUIRED)
 include_directories(${Boost_INCLUDE_DIRS})
+
+file(GLOB via  ${CMAKE_CURRENT_SOURCE_DIR}/via/http/*.cpp)
+source_group("via" FILES ${via} )   
 
 
 #
-# own sources
+# sources
 # 
 file(GLOB sources ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp)
 file(GLOB headers ${CMAKE_CURRENT_SOURCE_DIR}/*.h)
-
 
 #
 # build
@@ -38,6 +37,7 @@ file(GLOB headers ${CMAKE_CURRENT_SOURCE_DIR}/*.h)
 add_executable(	${PROJECT} 
 				${sources} 
 				${headers}
+            ${via}
 				wire.proto ${PROTO_SRCS} ${PROTO_HDRS} )
 
 target_link_libraries(	${PROJECT} 
